# -dvsm-v3

./: JSON.rs  README  README.rs  cargo.toml
dvsm-v3/: Cargo.toml  README_Z2_EXTREME_ADDENDUM.md
dvsm-v3/binary_api/schemas/: control.json
dvsm-v3/config/profiles/: fps_competitive.toml  fps_tactical.toml  mmo_instance.toml  mmo_open_world.toml
dvsm-v3/delta_pack/fps_layer/: cpu_stutter_guard.rs  fps_config.toml  streaming_hint_pass.wgsl
dvsm-v3/delta_pack/src/: lib.rs
dvsm-v3/delta_pack/tests/: invariants.rs
dvsm-v3/integration/: genre_governor.rs  mod.rs  render_budget.rs
dvsm-v3/platform/: ally_x_power.rs
dvsm-v3/shaders/: dvsm_gpu_supervisor.wgsl
dvsm-v3/spectral_io/: Cargo.toml
dvsm-v3/spectral_io/schemas/: io_governor.json
dvsm-v3/spectral_io/shaders/: entropy_scan.wgsl
dvsm-v3/spectral_io/src/: entropy.rs  lib.rs  markov_salience.rs  prefetch_governor.rs
dvsm-v3/src/: Cargo.toml  lib.rs
dvsm-v3/tests/: invariants.rs  spectral_io_invariants.rs
integration/: afmf2_bridge.rs  genre_governor.rs
