[workspace]
members = ["src", "spectral_io"]
resolver = "2"

[workspace.package]
version     = "3.0.0"
edition     = "2021"
license     = "AGPL-3.0-or-later"
authors     = ["DVSM Contributors"]
repository  = "https://github.com/your-org/dvsm-v3"

[profile.release]
lto           = true
codegen-units = 1
opt-level     = 3
strip         = true
panic         = "abort"
