[workspace]
members  = ["src", "spectral_io"]
resolver = "2"

[workspace.package]
version    = "3.0.0"
edition    = "2021"
license    = "AGPL-3.0-or-later"
authors    = ["DVSM Contributors"]
repository = "https://github.com/Dedoc-9/-dvsm-v3/tree/main/dvsm-v3"

# Shared deps — crates pin versions here; members use { workspace = true }
[workspace.dependencies]
dvsm-v3          = { path = "src" }
dvsm-spectral-io = { path = "spectral_io" }
sha2             = { version = "0.10", default-features = false }

[profile.release]
lto           = true
codegen-units = 1
opt-level     = 3
strip         = true
panic         = "abort"

[profile.dev]
opt-level = 1   # dvsm_step is O(DIM²); debug-opt avoids unusably slow invariant tests
